# alex

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pnpm-build-approval.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  RELEASE_NOTES_v0.1.2.md  S3_INTEGRATION_PLAN.md  components.json  conductor.json  docker-compose.yml  drizzle.config.ts  electron-builder.yml  jest.config.cjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: chromatic.yml  ci.yml  claude-code-review.yml  (+6 more)
.storybook/: main.ts  preview.ts
alex-relay/: Cargo.toml
alex-relay/src/: main.rs  protocol.rs  proxy.rs  relay.rs
data/: library.db
e2e/: global-setup.ts  playwright.config.ts
electron/: main.ts  paths.ts  preload.ts  sign-macos.js  store.ts  tray.ts  tsconfig.json
scripts/: db-push.js  dev-prerun.js  fix-admin-user-id.ts  prepare-watcher-rs.js  remove-duplicates.ts  run-watcher-rs.js
site/: README.md  index.html  script.js  style.css
src/: middleware.ts  proxy.ts
tasks/: prd-e2e-phase4-reader-tests.md  prd-e2e-phase5-collections-progress-tests.md  prd-e2e-phase6-admin-desktop-tests.md  prd-e2e-phase8-pr-required-checks.md  prd-phase-2-authentication.md  prd-phase-3-file-watcher.md  prd-phase-4-library-ui.md  prd-phase-5-pdf-reader.md  prd-phase-6-epub-reader.md  prd-phase-7-collections-progress.md
watcher/: handleAdd.ts  handleChange.ts  handleDelete.ts  index.ts  orphanCleanup.ts  tsconfig.build.json  types.ts
watcher-rs/: Cargo.toml  build.rs
watcher-rs/src/: db.rs  lib.rs  log.rs  main.rs  watcher.rs
watcher-rs/src/covers/: epub.rs  fallback.rs  mod.rs  pdf.rs
watcher-rs/src/extractors/: epub.rs  mod.rs  pdf.rs
watcher-rs/src/handlers/: add.rs  change.rs  delete.rs  mod.rs  orphan_cleanup.rs
watcher-rs/src/s3/: client.rs  handlers.rs  mod.rs  scanner.rs  stream.rs  watcher.rs
watcher-rs/src/tunnel/: client.rs  mod.rs  protocol.rs  proxy.rs  wordlist.rs
watcher-rs/tests/: covers.rs  integration.rs
(+185 files in other folders)
