[package]
name = "watcher-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3"
lopdf = "0.34"
notify = "8"
quick-xml = { version = "0.37", features = ["serialize"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
zip = "2"

[dev-dependencies]
tempfile = "3"
